Bug 1795536 - Don't let resizer set the width/height properties of the target element if its size won't change. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D159906